courses/k8s/courses-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courses-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: courses
  template:
    metadata:
      labels:
        app: courses
    spec:
      containers:
        - name: courses
          image: melvinkimathi/courses-app:v1.0.3
          ports:
            - containerPort: 9000
