courses/k8s/courses-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: courses-service
spec:
  selector:
    app: courses
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
  type: LoadBalancer
