courses/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: courses-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: courses-service
                port:
                  number: 9000
          - path: /api/v1/courses
            pathType: Prefix
            backend:
              service:
                name: courses-service
                port:
                  number: 9000
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: courses-service
                port:
                  number: 9000
          - path: /api/v1/assign_course
            pathType: Prefix
            backend:
              service:
                name: courses-service
                port:
                  number: 9000
